# purescript-haskell-sample

./: README.md
backend/: backend.cabal
backend/.stack-work/install/x86_64-osx/lts-9.17/8.0.2/flag-cache/: StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  adjunctions-4.3-A5jfd1yrmaY4DRMJuiquBp  aeson-1.1.2.0-7ssY6fy1GxZGXxTPcOtf2k  aeson-pretty-0.8.5-4ArTR5pkpZX48zloKnfDNn  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  ansi-wl-pprint-0.6.7.3-A79v826bgPr574HtaZPPqC  appar-0.1.4-DGWHHt2WRn9FI49prcwO9  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-3ql4hcH9pGfBAlE21oqFTQ  attoparsec-iso8601-1.0.0.0-CiauZZhskHA6jYy7CqE2mZ  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz  base-compat-0.9.3-KeJp8zYMpcS9WibvTcxU22  base-orphans-0.6-AbJ3lKVXygDCG0eeQEv8Iu  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  basement-0.0.4-5G9Gc8Ht9hD9gydJD2I2TQ  bifunctors-5.4.2-KcF2f75KyQm5BjgJ8WkHCw  blaze-builder-0.4.0.2-LxClHUTiKUUAxWtvJ5Oeoy  blaze-html-0.9.0.1-GQ0yZtPYt2i2KdgnUEOA8p  blaze-markup-0.8.0.0-GsxkVbRgODkgUQDmmDVob  byteorder-1.0.4-9NlNHkBVdo7F1prFVKrkcH  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  cabal-doctest-1.0.3-424yp4GSQAZHQyNl3c0zus  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  case-insensitive-1.2.0.10-1D5OUKQ7UrJ7IpOe0di4Un  cmdargs-0.10.18-1MOxB7BXiUZGCBZB9Kx8qK  comonad-5.0.2-Fq9Xy9jdx6uIyJZn00E6Yc  contravariant-1.4-29zF0Im431177ovfbHYCGv  cookie-0.4.3-LVlxdgOdUJj73o1VFenWKF  cryptonite-0.23-7aE9caGlGrwDnGcKBpfJ80  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  distributive-0.5.3-IX4kyVcHAyoH4uFYrsjY1R  (+79 more)
backend/bridge/: Main.hs
backend/src/: Lib.hs  Types.hs
backend/src/bridge/: Main.hs
(+8 files in other folders)
